# ProjectAccenture

./: .dockerignore  .gitignore  Dockerfile  README.md  databricks.yml  docker-compose.yml  main.py  pyproject.toml
data/metadata/: document_manifest.json
data/raw/html/: eba_loan_origination_guidelines_html.html
docs/: architecture.md  docker_usage.md  evaluation_report.md  project_demo_overview.md
evaluation/: evaluation_questions.json  evaluation_results.json
resources/: jobs.yml
src/: Downloader.py  check_search_documents.py  check_search_index.py  config.py  list_azure_search_indexes.py  rag_service.py  regulatory_corpus.py  uploader.py
src/data/metadata/: document_manifest.json
src/data/raw/html/: 32014L0065_MiFID_II_EN.html  32015L2366_PSD2_EN.html  32016R0679_GDPR_EN.html  32022R2554_DORA_EN.html  32024R1689_AI_Act_EN.html
src/data/raw/xml/: 32014L0065_MiFID_II_EN.xml  32015L2366_PSD2_EN.xml  32016R0679_GDPR_EN.xml  32022R2554_DORA_EN.xml  32024R1689_AI_Act_EN.xml
src/evaluation/: evaluate_rag.py
src/frontend/: api.py  index.html
src/governance/: pii_redaction.py
src/jobs/: bronze_ingestion.py  create_azure_search_index.py  diagnose_egress.py  downloader_job.py  gold_embeddings.py  silver_chunking.py  test_vector_search.py  upload_gold_to_azure_search.py
src/retired/: create_vector_index.py  uploader.py
src/scripts/: delete_azure_search_index.py
