[project]
name = "projectaccenture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-core>=1.41.0",
    "azure-search-documents>=12.0.0",
    "beautifulsoup4>=4.15.0",
    "databricks-sdk>=0.114.0",
    "databricks-vectorsearch>=0.74",
    "fastapi>=0.136.3",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.41.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]
